--- a/package/src/renderer/index.html
+++ b/package/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html data-theme="default">
   <head>
     <meta charset="UTF-8" />
-    <title>Jezzlab</title>
+    <title>JEZZLAB</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self' 'wasm-unsafe-eval' https://res.wx.qq.com; style-src 'self' 'unsafe-inline' data:; img-src 'self' data: https:; frame-src https://open.weixin.qq.com; connect-src 'self' https://api.weixin.qq.com https://res.wx.qq.com http://127.0.0.1:*"
